--- a/src/css/base/_typography.css
+++ b/src/css/base/_typography.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Lato";
-    src: url('fonts/Lato-Regular.woff2') format('woff2');
+    src: url('/public/fonts/Lato-Regular.woff2') format('woff2');
     font-weight: 400;
     font-style: normal;
 }
@@ -8,5 +8,5 @@
 body {
     font-family: 'Lato', sans-serif;
     font-size: 16px;
-    line-height: 1.5;
+    line-height: 20px;
 }
