--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,6 +14,7 @@
 
 .header {
     width: 100%;
+    height: 883px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -149,4 +150,45 @@
     font-size: 64px;
     line-height: 74px;
     color: #FFFFFF
+}
+
+/* Main Content */
+
+.main-content {
+    margin-top: 80px;
+}
+
+.section-primary {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 962px;
+    gap: 40px;
+}
+
+.section-primary__title {
+    font-size: 40px;
+    line-height: 54px;
+}
+
+.section-primary__image{
+    gap: 30px;
+}
+
+.section-primary__image-item {
+    width: 379px;
+}
+
+.section-primary__content {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    width: 816px;
+    height: 192px;
+    text-align: center;
+}
+
+.section-primary__content p {
+    font-size: 16px;
+    line-height: 22px;
 }
