--- a/src/css/base/_base.css
+++ b/src/css/base/_base.css
@@ -8,4 +8,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-  }
+}
+
+button:hover {
+    cursor: pointer;
+}
