--- a/src/css/main.css
+++ b/src/css/main.css
@@ -230,23 +230,23 @@
     line-height: 74px;
 }
 
-.section-second__subContent {
+.section-second__subcontent {
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
 
-.section-second__subContent-title{
+.section-second__subcontent-title {
     font-size: 20px;
     line-height: 30px;
 }
 
-.section-second__subContent-description{
+.section-second__subcontent-description {
     font-size: 14px;
     line-height: 22px;
 }
 
-.section-third{
+.section-third {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -257,6 +257,7 @@
 .section-third__note {
     width: 524px;
 }
+
 .section-third__note p {
     font-size: 14px;
     line-height: 22px;
@@ -265,4 +266,124 @@
 .section-third__description {
     font-size: 32px;
     line-height: 44px;
+}
+
+.section-fourth {
+    width: 100%;
+    height: 800px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.section-fourth__img {
+    width: 684px;
+}
+
+.product-item {
+    width: 338px;
+    height: 374px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+    background-color: #FFFFFF;
+
+}
+
+.product-item__main {
+    width: 100%;
+    height: 339.99px;
+    border-radius: 10px;
+    background-color: #F0F2EF;
+    padding: 16px 15px;
+    position: relative;
+}
+
+.product-item__action {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    position: relative;
+    z-index: 1;
+}
+
+.product-item__action-menu {
+    display: flex;
+    gap: 8px;
+}
+
+.product-item__action-favourite {
+    cursor: pointer;
+}
+
+.button-action {
+    background: #FFFFFF;
+    padding: 6px;
+    border-radius: 6px;
+}
+
+.product-item__img {
+    width: 301px;
+    height: 301px;
+    position: absolute;
+    top: 0px
+}
+
+.product-color__item {
+    width: 8px;
+    height: 8px;
+    border-radius: 10px;
+}
+
+.product-color {
+    width: 117px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    position:absolute;
+    top: 312px;
+    left: 110.5px;
+}
+
+.product-color__green {
+    background-color: #A8A687;
+}
+
+.product-color__terracota {
+    background-color: #C7A07C;
+}
+
+.product-color__light-blue {
+    background-color: #D6E1EB;
+}
+
+.product-color__blue {
+    background-color: #285E8F;
+}
+
+.product-color__number{
+    font-size: 12px;
+    line-height: 20px;
+    color: #797E7E
+}
+
+.product-list {
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
+}
+
+.product-item__info {
+    width: 299px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.product-item__info-name,
+.product-item__info-price {
+    font-size: 14px;
+    line-height: 22px;
 }
