--- a/src/css/main.css
+++ b/src/css/main.css
@@ -465,3 +465,55 @@
     line-height: 22px;
 }
 
+.section-sixth {
+    width: 1440px;
+    height: 800px;
+    position: relative;
+    overflow: hidden;
+    margin-top: 40px;
+}
+
+.place-list {
+    width: 1839px;
+    height: 100%;
+    display: flex;
+    gap: 10px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.place-list__item {
+    width: 453px;
+    height: 100%;
+    overflow: hidden;
+    border-radius: 16px;
+}
+
+.place-list__item-image {
+    height: 100%;
+}
+
+.section-sixth__action {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.section-sixth__action-left,
+.section-sixth__action-right {
+    width: 42px;
+    height: 46px;
+    padding: 8xp;
+}
+
+.section-sixth__action-left {
+    border-radius: 0px 8px 8px 0px;
+}
+
+.section-sixth__action-right {
+    border-radius: 8px 0px 0px 8px;
+}
