--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,7 +7,6 @@
     max-width: 1440px;
     margin: 0 auto;
     padding: 0;
-    gap: 80px;
 }
 
 /* Header */
@@ -401,7 +400,6 @@
     gap: 32px;
     position: absolute;
     top: 60px;
-    left: 32px;
 }
 
 .section-fifth__content-title {
@@ -423,7 +421,7 @@
     height: 533px;
     position: absolute;
     border-radius: 24px 0px 0px 24px;
-    left: 724px;
+    left: 692.5px;
 }
 
 .section-fifth__list-item {
@@ -433,7 +431,6 @@
     gap: 31px;
     position: absolute;
     top: 412px;
-    left: 31.5px;
 }
 
 .section-fifth__item {
@@ -471,6 +468,7 @@
     position: relative;
     overflow: hidden;
     margin-top: 40px;
+    transform: translateX(-26px);
 }
 
 .place-list {
@@ -517,3 +515,4 @@
 .section-sixth__action-right {
     border-radius: 8px 0px 0px 8px;
 }
+
