--- a/src/css/base/_reset.css
+++ b/src/css/base/_reset.css
@@ -9,3 +9,14 @@
 button {
   border: none;
 }
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+ul {
+  list-style-type: none;
+  padding-left: 0;
+  margin: 0;
+}
