--- a/src/css/base/_typography.css
+++ b/src/css/base/_typography.css
@@ -5,6 +5,13 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: "Lora";
+    src: url('/public/fonts/Lora-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
 body {
     font-family: 'Lato', sans-serif;
     font-size: 16px;
