--- a/src/css/main.css
+++ b/src/css/main.css
@@ -146,6 +146,10 @@
     left: 702.5px;
 }
 
+.nav__menu-logo-mobile {
+    display: none;
+}
+
 .header__title {
     width: 822px;
     z-index: 1;
@@ -227,8 +231,7 @@
 .section-second__img,
 .section-second__item,
 .section-second__content1,
-.section-second__content2
- {
+.section-second__content2 {
     width: 684px;
     border-radius: 20px;
 }
@@ -607,12 +610,13 @@
     gap: 10px;
     width: 313px;
 }
-.footer__subscribe-join__text h5{
+
+.footer__subscribe-join__text h5 {
     font-size: 16px;
     line-height: 22px;
 }
 
-.footer__subscribe-join__text p{
+.footer__subscribe-join__text p {
     font-size: 14px;
     line-height: 22px;
 }
@@ -629,6 +633,7 @@
     display: flex;
     gap: 9.29px;
 }
+
 .footer__subscribe-social__button {
     width: 31px;
     height: 31px;
@@ -705,4 +710,108 @@
     font-size: 14px;
     line-height: 22px;
     color: #797E7E;
+}
+
+
+/* mobile */
+@media (max-width: 767px) {
+
+    /* header */
+    .header {
+        width: 100%;
+        height: 721px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+    }
+
+    .header__banner {
+        width: 100%;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        height: 100%;
+        position: absolute;
+    }
+
+    .header__banner--background {
+        background-image: url('/public/images/mobile/banner.jpg');
+    }
+
+    .nav {
+        width: 359px;
+        margin-top: 8px;
+        padding-top: 14px;
+        z-index: 2;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .nav__sale-timer {
+        width: 100%;
+        height: 30px;
+        border-radius: 8px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 4px 12px;
+        background-color: #1F1F1F;
+        color: #FFFFFF;
+    }
+
+    .nav__sale-timer-text {
+        font-size: 9px;
+        line-height: 14x;
+    }
+
+    .countdown__duration {
+        font-size: 12px;
+        line-height: 20px;
+    }
+
+    .countdown__label {
+        font-size: 8px;
+        line-height: 9px;
+    }
+
+    .nav__menu-logo {
+        display: none;
+    }
+    
+    .nav__menu-logo-mobile {
+        display: block;
+       position: absolute;
+       top: 68px;
+       left: 150px;
+    }
+
+    .nav__menu-search {
+        display: none;
+    }
+
+    .nav__menu-text-login {
+        display: none;
+    }
+
+    .nav__menu-list {
+        justify-content: end !important;
+    }
+
+    .header__title {
+        width: 342px;
+        z-index: 1;
+        text-align: center;
+        position: absolute;
+        top: 150px;
+        left: 17px;
+    }
+
+    .header__title-text {
+        font-family: 'Lora', sans-serif;
+        font-size: 48px;
+        line-height: 54px;
+        color: #FFFFFF
+    }
 }
