--- a/src/css/main.css
+++ b/src/css/main.css
@@ -950,22 +950,20 @@
         gap: 14px;
         padding: 0px 5px;
     }
-    
+
     .section-third__note {
         width: 100%;
     }
-    
+
     .section-third__note p {
         font-size: 14px;
         line-height: 22px;
     }
-    
+
     .section-third__description {
         font-size: 28px;
         line-height: 44px;
     }
-    
-
 
 
     .section-fourth {
@@ -975,12 +973,12 @@
         flex-direction: column;
         gap: 8px;
     }
-    
+
     .section-fourth__img {
         width: 100%;
         height: 422px;
     }
-    
+
     .product-item {
         width: 182px;
         height: 247px;
@@ -990,9 +988,9 @@
         align-items: center;
         gap: 12px;
         background-color: #FFFFFF;
-    
+
     }
-    
+
     .product-item__main {
         width: 100%;
         height: 183px;
@@ -1002,7 +1000,7 @@
         position: relative;
         border-radius: 10px;
     }
-    
+
     .product-item__action {
         display: flex;
         justify-content: space-between;
@@ -1011,23 +1009,23 @@
         position: relative;
         z-index: 1;
     }
-    
+
     .product-item__action-menu {
         display: flex;
         gap: 8px;
     }
-    
+
     .product-item__action-favourite {
         cursor: pointer;
     }
-    
+
     .button-action {
         background: #FFFFFF;
         padding: 6px;
         border-radius: 4px;
         font-size: 9px;
     }
-    
+
     .product-item__img {
         width: 168px;
         height: 168px;
@@ -1035,33 +1033,33 @@
         top: 0px;
         border-radius: 10px;
     }
-    
-    .product-color{
+
+    .product-color {
         display: none;
     }
-    
+
     .product-item__info-desktop {
         display: none !important;
     }
-    
+
     .product-list {
         display: flex;
         flex-direction: column;
         gap: 10px;
     }
-    
+
     .product-item__info {
         width: 138px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
     }
-    
-    .product-item__info-name{
+
+    .product-item__info-name {
         font-size: 14px;
         line-height: 22px;
     }
-    
+
     .product-item__info-price {
         width: 150px;
         display: flex;
@@ -1089,5 +1087,79 @@
         color: #FFFFFF;
         font-size: 12px;
         line-height: 20px;
+    }
+
+    .section-fifth {
+        width: 100%;
+        height: 722px;
+        position: relative;
+    }
+
+    .section-fifth__content {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        position: absolute;
+    }
+
+    .section-fifth__content-title h3 {
+        font-family: 'Lora', sans-serif;
+        font-size: 30px;
+        line-height: 42px;
+    }
+
+    .section-fifth__content-description {
+        font-size: 14px;
+        line-height: 22px;
+        text-align: center;
+    }
+
+    .section-fifth__img {
+        width: 375px;
+        height: 289px;
+        position: absolute;
+        border-radius: 0px;
+        left: 0px;
+        top: 240px;
+    }
+
+    .section-fifth__list-item {
+        width: 996px;
+        height: 327px;
+        display: flex;
+        gap: 10px;
+        position: absolute;
+        top: 470px;
+        left: 8px;
+    }
+
+    .section-fifth__item {
+        position: relative;
+        width: 245px;
+        height: 100%;
+        background: #F4F0EA;
+        border-radius: 16px;
+    }
+
+    .section-fifth__item-img {
+        width: 81.67px;
+        height: 86px;
+        position: absolute;
+        top: 32px;
+        left: 92px;
+    }
+
+    .section-fifth__item-content {
+        width: 211px;
+        height: 110px;
+        position: absolute;
+        top: 153px;
+        left: 17px;
+    }
+
+    .section-fifth__item-content p {
+        font-size: 16px;
+        line-height: 22px;
     }
 }
