--- a/src/css/main.css
+++ b/src/css/main.css
@@ -61,10 +61,6 @@
     line-height: 20x;
 }
 
-.countdown {
-    gap: 4px;
-}
-
 .countdown__item {
     display: flex;
     flex-direction: column;
@@ -111,6 +107,18 @@
     padding: 0 12px 0 12px;
 }
 
+@media (min-width: 767px) {
+    .icon-mobile {
+        display: none;
+    }
+    .product-item__info-mobile {
+        display: none !important
+    }
+    .nav__menu-logo-mobile {
+        display: none;
+    }
+}
+
 .nav__menu-icon {
     gap: 8px;
 }
@@ -144,10 +152,6 @@
     position: absolute;
     top: 76px;
     left: 702.5px;
-}
-
-.nav__menu-logo-mobile {
-    display: none;
 }
 
 .header__title {
@@ -374,10 +378,6 @@
     width: 8px;
     height: 8px;
     border-radius: 10px;
-}
-
-.product-item__info-mobile {
-    display: none;
 }
 
 .product-color {
@@ -756,6 +756,7 @@
         display: flex;
         flex-direction: column;
         gap: 20px;
+        transform: translateY(-14px);
     }
 
     .nav__sale-timer {
@@ -765,7 +766,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 4px 12px;
+        padding: 2px 7.5px;
         background-color: #1F1F1F;
         color: #FFFFFF;
     }
@@ -775,14 +776,48 @@
         line-height: 14x;
     }
 
+    .countdown__item--days {
+        width: 21px;
+        margin: 0 4px 0 0;
+    }
+    
+    .countdown__item--hours {
+        width: 26px;
+        margin: 0 4px;
+    }
+    
+    .countdown__item--minutes {
+        width: 17px;
+        margin: 0 4px;
+    }
+    
+    .countdown__item--seconds {
+        width: 16px;
+        margin: 0 0 0 4px;
+    }
+
     .countdown__duration {
         font-size: 12px;
-        line-height: 20px;
+        line-height: 14px;
     }
 
     .countdown__label {
         font-size: 8px;
         line-height: 9px;
+    }
+
+    .nav__menu {
+        width: 356px;
+        height: 22px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0px 12px;
+        transform: translateY(-4px);
+    }
+    
+    .icon-desktop {
+        display: none;
     }
 
     .nav__menu-logo {
@@ -792,8 +827,8 @@
     .nav__menu-logo-mobile {
         display: block;
         position: absolute;
-        top: 68px;
-        left: 150px;
+        top: -2px;
+        left: 142px;
     }
 
     .nav__menu-search {
@@ -837,9 +872,15 @@
         flex-direction: column;
         width: 100%;
         height: 709px;
-        gap: 8px;
-        margin-top: 10px;
+        gap: 28px;
+        margin-top: 40px;
     }
+
+    .section-first__title {
+        font-family: 'Lora', sans-serif;
+        font-size: 32px;
+        line-height: 42px;
+    }    
 
     .section-first__image {
         display: flex;
@@ -903,12 +944,12 @@
 
     .section-second__content1 {
         background-color: #F4F0EA;
-        padding: 34px 18px 54px 18px;
+        padding: 34px 18px 34px 18px;
         display: flex;
         flex-direction: column;
         align-items: start;
         justify-content: end;
-        gap: 20px;
+        gap: 14px;
     }
 
     .section-second__content2 {
@@ -1093,13 +1134,15 @@
         width: 100%;
         height: 722px;
         position: relative;
+        margin-top: -56px;
+        margin-left: 6px;
     }
 
     .section-fifth__content {
         width: 100%;
         display: flex;
         flex-direction: column;
-        gap: 16px;
+        gap: 24px;
         position: absolute;
     }
 
