--- a/src/css/components/header/header.css
+++ b/src/css/components/header/header.css
@@ -150,3 +150,139 @@
     line-height: 74px;
     color: #FFFFFF
 }
+
+@media (max-width: 767px) {
+    .header {
+        width: 100%;
+        height: 721px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+    }
+
+    .header__banner {
+        width: 100%;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        height: 100%;
+        position: absolute;
+    }
+
+    .header__banner--background {
+        background-image: url('/public/images/mobile/banner.jpg');
+    }
+
+    .nav {
+        width: 359px;
+        margin-top: 8px;
+        padding-top: 14px;
+        z-index: 2;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        transform: translateY(-14px);
+    }
+
+    .nav__sale-timer {
+        width: 100%;
+        height: 30px;
+        border-radius: 8px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 2px 7.5px;
+        background-color: #1F1F1F;
+        color: #FFFFFF;
+    }
+
+    .nav__sale-timer-text {
+        font-size: 9px;
+        line-height: 14x;
+    }
+
+    .countdown__item--days {
+        width: 21px;
+        margin: 0 4px 0 0;
+    }
+
+    .countdown__item--hours {
+        width: 26px;
+        margin: 0 4px;
+    }
+
+    .countdown__item--minutes {
+        width: 17px;
+        margin: 0 4px;
+    }
+
+    .countdown__item--seconds {
+        width: 16px;
+        margin: 0 0 0 4px;
+    }
+
+    .countdown__duration {
+        font-size: 12px;
+        line-height: 14px;
+    }
+
+    .countdown__label {
+        font-size: 8px;
+        line-height: 9px;
+    }
+
+    .nav__menu {
+        width: 356px;
+        height: 22px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0px 12px;
+        transform: translateY(-4px);
+    }
+
+    .icon-desktop {
+        display: none;
+    }
+
+    .nav__menu-logo {
+        display: none;
+    }
+
+    .nav__menu-logo-mobile {
+        display: block;
+        position: absolute;
+        top: -2px;
+        left: 142px;
+    }
+
+    .nav__menu-search {
+        display: none;
+    }
+
+    .nav__menu-text-login {
+        display: none;
+    }
+
+    .nav__menu-list {
+        justify-content: end !important;
+    }
+
+    .header__title {
+        width: 342px;
+        z-index: 1;
+        text-align: center;
+        position: absolute;
+        top: 150px;
+        left: 17px;
+    }
+
+    .header__title-text {
+        font-family: 'Lora', sans-serif;
+        font-size: 48px;
+        line-height: 54px;
+        color: #FFFFFF
+    }
+
+}
