test: change from Absolute path to Relative path

--- a/src/css/base/_typography.css
+++ b/src/css/base/_typography.css
@@ -1,13 +1,13 @@
 @font-face {
     font-family: "Lato";
-    src: url('/public/fonts/Lato-Regular.woff2') format('woff2');
+    src: url('../../../../public/fonts/Lato-Regular.woff2') format('woff2');
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: "Lora";
-    src: url('/public/fonts/Lora-Regular.ttf') format('truetype');
+    src: url('../../../../public/fonts/Lora-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
 }
