--- a/src/css/components/header/header.css
+++ b/src/css/components/header/header.css
@@ -19,7 +19,7 @@
 }
 
 .header__banner--background {
-    background-image: url('/public/images/desktop/banner.jpg');
+    background-image: url('../../../../public/images/desktop/banner.jpg');
 }
 
 .nav {
@@ -171,7 +171,7 @@
     }
 
     .header__banner--background {
-        background-image: url('/public/images/mobile/banner.jpg');
+        background-image: url('../../../../public/images/mobile/banner.jpg');
     }
 
     .nav {
