--- a/src/css/components/main-content/section-fifth/section-fifth.css
+++ b/src/css/components/main-content/section-fifth/section-fifth.css
@@ -115,7 +115,7 @@
     }
 
     .section-fifth__list-item {
-        width: 996px;
+        width: fit-content;
         height: 327px;
         display: flex;
         gap: 10px;
