--- a/src/css/components/header/header.css
+++ b/src/css/components/header/header.css
@@ -150,6 +150,88 @@
     line-height: 74px;
     color: #FFFFFF
 }
+@media (max-width: 991px) {
+    .header {
+        width: 100%;
+        height: 721px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+    }
+
+    .header__banner {
+        width: 100%;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        height: 100%;
+        position: absolute;
+    }
+
+    .header__banner--background {
+        background-image: url('../../../../public/images/desktop/banner.jpg');
+    }
+
+    .nav {
+        width: 100%;
+        margin-top: 8px;
+        padding-top: 14px;
+        z-index: 2;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        transform: translateY(-14px);
+    }
+
+    .nav__sale-timer {
+        width: 100%;
+        height: 30px;
+        border-radius: 8px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 2px 7.5px;
+        background-color: #1F1F1F;
+        color: #FFFFFF;
+    }
+
+    .nav__sale-timer-text {
+        font-size: 9px;
+        line-height: 14x;
+    }
+
+    .icon-desktop {
+        display: none;
+    }
+
+    .nav__menu-logo {
+        display: none;
+    }
+
+    .nav__menu-logo-mobile {
+        display: block;
+        position: absolute;
+        top: 60px;
+        left: 400px;
+    }
+
+    .header__title {
+        width: 342px;
+        z-index: 1;
+        text-align: center;
+        position: absolute;
+        top: 250px;
+        left: 280px;
+    }
+
+    .header__title-text {
+        font-family: 'Lora', sans-serif;
+        font-size: 48px;
+        line-height: 54px;
+        color: #FFFFFF
+    }
+}
 
 @media (max-width: 767px) {
     .header {
@@ -284,5 +366,5 @@
         line-height: 54px;
         color: #FFFFFF
     }
-
+    
 }
